--- a/kontak.html
+++ b/kontak.html
@@ -36,13 +36,13 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav ms-auto gap-3">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Tentang</a>
+                                    <a class="nav-link active" aria-current="page" href="https://contact-iqbal.github.io/portofolio/">Tentang</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Pendidikan</a>
+                                    <a class="nav-link" href="https://contact-iqbal.github.io/portofolio/">Pendidikan</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="btn btn-primary contact-btn" href="index.html">Beranda</a>
+                                    <a class="btn btn-primary contact-btn" href="https://contact-iqbal.github.io/portofolio/">Beranda</a>
                                 </li>
                             </ul>
                         </div>
