--- a/kontak.html
+++ b/kontak.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio</title>
+    <title>contact-iqbal</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/style2.css">
