--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>contact-iqbal</title>
+  <title>contact.iqbal</title>
   <link rel="icon" href="favicon.ico" />
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="./style/style2.css">
@@ -91,10 +91,42 @@
                 </div>
 
                 <div class="content-project">
-                  <h5><b>Projek 1</b></h5>
+                  <h5><b>Flex design</b></h5>
                   <hr>
                   <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
-                    menggunakan bahasa pemrograman PHP dan MySQL.</p>
+                    menggunakan bahasa pemrograman HTML dan CSS</p>
+                </div>
+
+              </div>
+            </a>
+            <a href="">
+              <div class="card-project">
+
+                <div class="image-project">
+                  <img src="" alt="">
+                </div>
+
+                <div class="content-project">
+                  <h5><b>Bootstrap 5.3</b></h5>
+                  <hr>
+                  <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
+                    menggunakan bahasa pemrograman HTML dan CSS</p>
+                </div>
+
+              </div>
+            </a>
+            <a href="">
+              <div class="card-project">
+
+                <div class="image-project">
+                  <img src="" alt="">
+                </div>
+
+                <div class="content-project">
+                  <h5><b>Portofolio Sederhana</b></h5>
+                  <hr>
+                  <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
+                    menggunakan bahasa pemrograman HTML dan CSS</p>
                 </div>
 
               </div>
