--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio</title>
+  <title>contact.iqbal</title>
   <link rel="icon" href="favicon.ico" />
-  <link rel="stylesheet" href="./style/style.css">
-  <link rel="stylesheet" href="./style/style2.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -91,7 +91,39 @@
                 </div>
 
                 <div class="content-project">
-                  <h5><b>Projek 1</b></h5>
+                  <h5><b>Flex design</b></h5>
+                  <hr>
+                  <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
+                    menggunakan bahasa pemrograman PHP dan MySQL.</p>
+                </div>
+
+              </div>
+            </a>
+            <a href="">
+              <div class="card-project">
+
+                <div class="image-project">
+                  <img src="" alt="">
+                </div>
+
+                <div class="content-project">
+                  <h5><b>Bootstrap 5.3</b></h5>
+                  <hr>
+                  <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
+                    menggunakan bahasa pemrograman PHP dan MySQL.</p>
+                </div>
+
+              </div>
+            </a>
+            <a href="">
+              <div class="card-project">
+
+                <div class="image-project">
+                  <img src="" alt="">
+                </div>
+
+                <div class="content-project">
+                  <h5><b>Portofolio Sederhana</b></h5>
                   <hr>
                   <p class="text text-secondary">Projek ini adalah projek pertama saya yang saya kerjakan dengan
                     menggunakan bahasa pemrograman PHP dan MySQL.</p>
